Correct spacing for reviews and restaurant.

--- a/css/restaurant-media-queries.css
+++ b/css/restaurant-media-queries.css
@@ -1,8 +1,29 @@
+/* DESKTOP VIEW */
+@media only screen and (min-width: 0px) {
+	#footer {
+		padding: 25px 0;
+	}
+
+	.inside #footer {
+		width: 100%;
+	}
+}
+
 /* TABLET VIEW */
 @media only screen and (min-width: 750px) and (max-width: 950px) {
 	#reviews-list li {
 		width: 80%;
+		padding: 0 5px 20px;
 	}
+
+	#reviews-container {
+		padding: 30px 30px 80px;
+	}
+
+	#restaurant-container {
+		padding: 140px 20px 30px;
+	}
+
 }
 
 /* MOBILE VIEW */
@@ -26,6 +47,33 @@
 		height: 300px;
 		position: relative;
 		top: 130px;
+	}
+
+	/* newest changes */
+	#restaurant-container {
+		padding: 140px 0px 30px;
+		text-align: center;
+	}
+
+	#restaurant-cuisine {
+		margin: 0 auto 20px;
+	}
+
+	#restaurant-hours {
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	#reviews-container {
+		padding: 30px 0px 80px;
+	}
+
+	#reviews-container h2 {
+		text-align: center;
+	}
+
+	#reviews-list li {
+		margin: 0 auto 30px;
 	}
 
 }
